--- a/baitaplon.html
+++ b/baitaplon.html
@@ -118,7 +118,7 @@
 <section class="dishes" id="dishes">
 
 	<h3 class="sub-heading"> Các sản phẩm hiện nay chúng tôi </h3>
-	<h1 class="heading"> Sản phẩm đang thị hành </h1>
+	<h1 class="heading"> Sản phẩm đang thịnh hành </h1>
 
 	<div class="box-container">
 
